fix(ui): correct padding side for image-text spacing
- Apply padding-right to left column (image) instead of text column

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -520,10 +520,7 @@ select:focus-visible {
 
 /* Plus d'espace entre la photo et le texte */
 @media (min-width: 768px) {
-    .about__profile-picture {
-        padding-left: 50px;
-    }
-    #about .col-md-6:last-child {
+    #about .col-md-6:first-child {
         padding-right: 50px;
     }
 }
